Such an emotional week

--- a/speechEmotionRecognition.ipynb
+++ b/speechEmotionRecognition.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -323,6 +323,217 @@
     "crema_mapped_emotions = [map_emotion_crema(f) for f in crema_files[:30]]\n",
     "for emotion in crema_mapped_emotions:\n",
     "    print(emotion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1.2.3 Tess Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def explore_dataset(directory):\n",
+    "    file_list = []\n",
+    "    for root, _, files in os.walk(directory):\n",
+    "        for file in files:\n",
+    "            if file.endswith(\".wav\"):\n",
+    "                file_list.append(os.path.join(root, file))\n",
+    "                \n",
+    "    return file_list\n",
+    "tess_path = \"tess/TESS Toronto emotional speech set data/\"\n",
+    "\n",
+    "print(tess_files[:10])\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "TESS Emotions:\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n",
+      "angry\n"
+     ]
+    }
+   ],
+   "source": [
+    "def map_emotion_tess(filename):\n",
+    "    emotion_keywords = {\n",
+    "        \"neutral\": \"neutral\", \"happy\": \"happy\", \"sad\": \"sad\",\n",
+    "        \"angry\": \"angry\", \"fear\": \"fearful\", \"disgust\": \"disgust\",\n",
+    "        \"ps\": \"surprised\"\n",
+    "    }\n",
+    "    for key, emotion in emotion_keywords.items():\n",
+    "        if key in filename.lower():\n",
+    "            return emotion\n",
+    "    return \"unknown\"\n",
+    "\n",
+    "tess_files = explore_dataset(tess_path)\n",
+    "tess_mapped_emotions = [map_emotion_tess(f) for f in tess_files[:30]]\n",
+    "\n",
+    "print(\"\\nTESS Emotions:\")\n",
+    "print(\"\\n\".join(tess_mapped_emotions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1.2.4 Savee Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we get a Function to explore the dataset and list all audio files\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DC_a01.wav', 'DC_a02.wav', 'DC_a03.wav', 'DC_a04.wav', 'DC_a05.wav', 'DC_a06.wav', 'DC_a07.wav', 'DC_a08.wav', 'DC_a09.wav', 'DC_a10.wav']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def explore_dataset(directory):\n",
+    "    file_list = []\n",
+    "    for root, _, files in os.walk(directory):\n",
+    "        for file in files:\n",
+    "            if file.endswith(\".wav\"):\n",
+    "                file_list.append(file)\n",
+    "    return file_list \n",
+    "\n",
+    "savee_path = \"savee/ALL/\"\n",
+    "savee_files = explore_dataset(savee_path)\n",
+    "\n",
+    "print(savee_files[:10])           "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's map emotions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAVEE Dataset - Mapped Emotions:\n",
+      "DC_a01.wav → angry\n",
+      "DC_a02.wav → angry\n",
+      "DC_a03.wav → angry\n",
+      "DC_a04.wav → angry\n",
+      "DC_a05.wav → angry\n",
+      "DC_a06.wav → angry\n",
+      "DC_a07.wav → angry\n",
+      "DC_a08.wav → angry\n",
+      "DC_a09.wav → angry\n",
+      "DC_a10.wav → angry\n",
+      "DC_a11.wav → angry\n",
+      "DC_a12.wav → angry\n",
+      "DC_a13.wav → angry\n",
+      "DC_a14.wav → angry\n",
+      "DC_a15.wav → angry\n",
+      "DC_d01.wav → disgust\n",
+      "DC_d02.wav → disgust\n",
+      "DC_d03.wav → disgust\n",
+      "DC_d04.wav → disgust\n",
+      "DC_d05.wav → disgust\n",
+      "DC_d06.wav → disgust\n",
+      "DC_d07.wav → disgust\n",
+      "DC_d08.wav → disgust\n",
+      "DC_d09.wav → disgust\n",
+      "DC_d10.wav → disgust\n",
+      "DC_d11.wav → disgust\n",
+      "DC_d12.wav → disgust\n",
+      "DC_d13.wav → disgust\n",
+      "DC_d14.wav → disgust\n",
+      "DC_d15.wav → disgust\n"
+     ]
+    }
+   ],
+   "source": [
+    "def map_emotion_savee(filename):\n",
+    "    emotion_mapping = {\n",
+    "        \"n\": \"neutral\", \"h\": \"happy\", \"sa\": \"sad\", \"a\": \"angry\",\n",
+    "        \"f\": \"fearful\", \"d\": \"disgust\", \"su\": \"surprised\"\n",
+    "    }\n",
+    "    # Extracting the first characters of the filename for emotion mapping\n",
+    "    code = filename[3:5] if filename[3:5] in emotion_mapping else filename[3]\n",
+    "    return emotion_mapping.get(code, \"unknown\")\n",
+    "\n",
+    "savee_files = explore_dataset(savee_path)\n",
+    "\n",
+    "savee_mapped_emotions = [(f, map_emotion_savee(f)) for f in savee_files]\n",
+    "\n",
+    "print(\"SAVEE Dataset - Mapped Emotions:\")\n",
+    "for file, emotion in savee_mapped_emotions[:30]:\n",
+    "    print(f\"{file} → {emotion}\")"
    ]
   }
  ],
